--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>NILSON FERNANDES DO AMARAL</h1>
+    <h1 style="color: red;">NILSON FERNANDES DO AMARAL</h1>
 </body>
 </html>
